# quix-streams

./: .appveyor.yml  .gitignore  .travis.yml  AUTHORS  AUTHORS.md  CMakeLists.txt  LICENSE  README.md  TODO  azure-pipelines.yml
.ci/: build.sh  install.sh  linux-pipeline.yml
.travis/: script.sh
FooBar/: CMakeLists.txt
Transport/: CMakeLists.txt
Transport/docs/: Doxyfile.in
Transport/dotnet/: CMakeLists.txt  transport.i
Transport/include/transport/: Callback.hpp  ParameterDataRaw.hpp  Transport.hpp
Transport/python/: CMakeLists.txt  transport.i
Transport/src/: ParameterDataRaw.cpp  Transport.cpp
Transport/test/: CMakeLists.txt
Transport/test/src/: Foo_UT.cpp
cmake/: cpp.cmake  dotnet.cmake  python.cmake
dotnet/: Mizux.CMakeSwig.csproj.in  Mizux.CMakeSwig.runtime.csproj.in
lib/: CMakeLists.txt
lib/librdkafka/: CMakeLists.txt
lib/librdkafka/repo/: CMakeLists.txt
lib/librdkafka/win/: rdkafka++.exp
lib/protobuf/: CMakeLists.txt
python/: setup.py.in  (+1 more)
samples/transport/: CMakeLists.txt  main.cpp
samples/transport/samples/: const.cpp  const.h  exampleModel.h  readMessage.cpp  readMessage.h  writeMessage.cpp  writeMessage.h
samples/transport/utils/: myThread.cpp  myThread.h  ptrLock.h
src/: CMakeLists.txt  main.cpp
src/exceptions/: argumentOutOfRangeException.h  invalidOperationException.h
src/process/models/events/eventDataRaws/: eventDataRaw.h  eventDataRaws.h  eventDataRawsProto.pb.cc  eventDataRawsProto.pb.h  eventDataRawsProto.proto  eventDataRawsProtobufCodec.cpp  eventDataRawsProtobufCodec.h
src/process/models/events/eventDefinitions/: eventDefinition.cpp  eventDefinition.h  eventDefinitions.h  eventDefinitionsProto.pb.cc  eventDefinitionsProto.pb.h  eventDefinitionsProto.proto  eventDefinitionsProtobufCodec.cpp  eventDefinitionsProtobufCodec.h
src/process/models/events/streamEnd/: streamEnd.h  streamEndProto.pb.cc  streamEndProtobufCodec.cpp  streamEndProtobufCodec.h
src/process/models/parameters/parameterDefinitions/: parameterDefinition.cpp  parameterDefinition.h  parameterDefinitions.h  parameterDefinitionsProto.pb.cc  parameterDefinitionsProto.pb.h  parameterDefinitionsProto.proto  parameterDefinitionsProtobufCodec.cpp  parameterDefinitionsProtobufCodec.h
src/process/models/parameters/parametersdataraw/: parameterDataRaw.h  parameterDataRawProto.pb.cc  parameterDataRawProto.pb.h  parameterDataRawProto.proto  parameterDataRawProtobufCodec.cpp  parameterDataRawProtobufCodec.h
src/process/models/streamEnd/: streamEnd.h  streamEndProto.pb.h  streamEndProto.proto  streamEndProtobufCodec.cpp  streamEndProtobufCodec.h
src/process/models/streamProperties/: streamProperties.h  streamPropertiesProto.pb.cc  streamPropertiesProto.pb.h  streamPropertiesProto.proto  streamPropertiesProtobufCodec.cpp  streamPropertiesProtobufCodec.h
src/process/models/utility/: helpers.cpp  helpers.h
src/transport/: initializer.cpp  initializer.h  modelKey.h  transport.cpp  transport.h  transportPublisher.cpp  transportPublisher.h  transportSubscriber.cpp  transportSubscriber.h  transportWriter.cpp  transportWriter.h
src/transport.kafka/: IKafkaPublisher.h  IKafkaSubscriber.cpp  IKafkaSubscriber.h  constants.h  contstants.cpp  kafkaConfBuilder.cpp  kafkaConfBuilder.h  kafkaHelper.cpp  kafkaHelper.h  kafkaPackageExtensions.h  kafkaPublisher.cpp  kafkaPublisher.h  kafkaSubscriber.cpp  kafkaSubscriber.h  knownKafkaTransportContextKeys.h  publisherConfiguration.cpp  publisherConfiguration.h  subscriberConfiguration.cpp  subscriberConfiguration.h  topicConfiguration.cpp  topicConfiguration.h
src/transport.kafka/exceptions/: kafkaException.h
src/transport.kafka/extensions/: kafkaPackageExtensions.h  kafkaTransportContextExtensions.h
src/transport/codec/: ICodec.cpp  ICodec.h  abstractCodec.cpp  abstractCodec.h  binaryCodec.h  codecId.h
src/transport/fw/: ICanCommit.cpp  ICanCommit.h  IModifier.h  IRevocation.h  byteMerger.cpp  byteMerger.h  byteMergingModifier.cpp  byteMergingModifier.h  byteSplitProtocolHeader.h  byteSplitter.cpp  byteSplitter.h  byteSplittingModifier.cpp  byteSplittingModifier.h  commitModifier.cpp  commitModifier.h  deserializingModifier.cpp  deserializingModifier.h  modelKey.h  serializingModifier.cpp  serializingModifier.h
src/transport/fw/codecs/: byteCodec.cpp  byteCodec.h  codecBundle.h
src/transport/fw/exceptions/: deserializingException.h  invalidOperationException.h  outOfRangeException.h  serializingException.h
src/transport/fw/helpers/: transportPackageValue.h  transportPackageValueCodec.cpp  transportPackageValueCodec.h  transportPackageValueCodecProtobuf.cpp  transportPackageValueCodecProtobuf.h  transportPackageValueCodecProtobufRaw.pb.cc  transportPackageValueCodecProtobufRaw.pb.h  transportPackageValueCodecProtobufRaw.proto
src/transport/io/: IModel.h  IPackage.h  IPublisher.cpp  IPublisher.h  ISubscriber.h  MetaData.h  Package.h  abstractInput.h  abstractOutput.h  abstractPackage.h  byteArray.h  metaData.h  package.h  rawBytePackageValue.h  transportContext.cpp  transportContext.h
src/transport/registry/: codecRegistry.cpp  codecRegistry.h  modelKeyRegistry.cpp  modelKeyRegistry.h
src/utils/: boxedValue.h  eventHandler.h  extensions.h  log.cpp  log.h  object.h  state.h  stringTools.h  timer.cpp  timer.h  vectorTools.h
test/: CMakeLists.txt  byteSplitter_test.cpp  codecRegistry_test.cpp  main.cpp  modelKeyRegistry_test.cpp  transport_test.cpp
test/transport/: init.cpp  transportPublisher_test.cpp  transportSubscriber_test.cpp  transport_test.cpp
test/transport/fw/: byteMerger_test.cpp  byteMergingModifier_test.cpp  byteSplitter_test.cpp  byteSplittingModifier_test.cpp  commitModifier_test.cpp  serializationModifiers_test.cpp
test/transport/fw/helpers/: transportPackageValueCodec_test.cpp
test/transport/helpers/: packageFactory.h  passthrough.h  testModel.cpp  testModel.h
test/transport/io/: package_test.cpp  transportContext_test.cpp
test/transport/registry/: codecRegistry_test.cpp  modelKeyRegistry_test.cpp
test/utils/: boxedValue_test.cpp  eventHandler_test.cpp  timer_test.cpp
(+24 files in other folders)
